src/lib/k8s/__fixtures__/invalid-yaml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
	name: broken-tabs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: broken-tabs
